--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,15 +9,15 @@ assert file(project.ext.ASSET_DIR + "/hand_graph.lite").exists()
 assert file(project.ext.ASSET_DIR + "/graph_label_strings.txt").exists()
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+
     defaultConfig {
         applicationId "android.example.com.tflitecamerademo"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
     lintOptions {
         abortOnError false
@@ -39,25 +39,15 @@ android {
     }
 }
 
-repositories {
-    maven {
-        url 'https://google.bintray.com/tensorflow'
-    }
-    google()
-}
-
 dependencies {
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    implementation 'com.android.support:appcompat-v7:25.2.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    implementation 'com.android.support:design:25.2.0'
-    implementation 'com.android.support:support-annotations:25.3.1'
-    implementation 'com.android.support:support-v13:25.2.0'
-    implementation 'com.android.support:cardview-v7:25.2.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'com.google.android.material:material:1.1.0'
+    implementation 'androidx.annotation:annotation:1.1.0'
+    implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.github.medyo:android-about-page:1.2.4'
 
     implementation 'com.google.firebase:firebase-core:16.0.3'
@@ -69,7 +59,7 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite:+'
     implementation 'org.tensorflow:tensorflow-android:1.2.0'
 
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13'
 }
 
 apply plugin: 'com.google.gms.google-services'
