--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://google.bintray.com/tensorflow'
+        }
     }
 }
 
