--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
  limitations under the License.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.android.tflitecamerademo">
 
     <uses-permission android:name="android.permission.CAMERA" />
@@ -26,17 +27,19 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+    <uses-permission
+        android:name="com.google.android.finsky.permission.BIND_GET_INSTALL_REFERRER_SERVICE"
+        tools:node="remove" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_ml"
         android:label="@string/app_name"
         android:largeHeap="true"
-        android:theme="@style/MaterialTheme">
+        android:theme="@style/MaterialTheme"
+        tools:ignore="AllowBackup">
         <activity
-            android:name="info.hannes.tflitecamera.recognitionObjects.CameraActivity"
-            android:label="@string/app_name" />
-        <activity
-            android:name="info.hannes.tflitecamera.recognitionObjectsTensorFlow.Camera2Activity"
+            android:name="info.hannes.tflitecamera.CameraActivity"
             android:label="@string/app_name" />
         <activity
             android:name="info.hannes.tflitecamera.home.HomeActivity"
